crates/plotnik-tests/tests/04-emit/bytecode/nodes/wildcard_parent_impossible.txt
Q = (_ (program) @p)
------------------ DIAGNOSTICS -------------------
error: no node the grammar builds takes these children
 --> query.ptk:1:6
  |
1 | Q = (_ (program) @p)
  |      ^
  |
help: `(_)` matches any named node, but no named node kind admits this combination of children in this order
